<resources>
    <string name="app_name">Recipe Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favorites</string>
    <string name="your_keyword_here">Your keyword here…</string>
    <string name="add_fav">Add to favorites</string>
    <string name="cal_serving">Cal/Serving</string>
    <string name="recipe_label">Recipe Label</string>
    <string name="servings">Servings</string>
    <string name="publisher">Publisher</string>
    <string name="search">Search</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_favorites_detail">FavoritesDetailActivity</string>
    <string name="favorites">Favorites</string>
    <string name="search_your_first_recipe">Search your first recipe!</string>
    <string name="ingredients">Ingredients</string>
    <string name="all_ingredients">All ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="_servings">0</string>
    <string name="_publisher">none</string>
    <string name="_calories">0</string>
</resources>