<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/viewBg"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main"
        android:orientation="vertical"
        android:id="@+id/detailsFrag">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/detailfrag_image"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/detailfrag_recipe_name"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="109dp"
                android:text="@string/recipe_label"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/item_detail_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <android.support.v7.widget.CardView
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="275dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cal_serving"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_calories"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/detailfrag_cal"/>

                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publisher"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_publisher"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/detailfrag_publisher"/>

                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/servings"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_servings"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/detailfrag_servings"/>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <android.support.v7.widget.CardView

            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:gravity="center_horizontal"
                android:id="@+id/detailfrag_amount_ingredients"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_ingredients"
                android:gravity="center_horizontal"
                android:paddingTop="40dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="17sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/detailfrag_all_ingredients"
                />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle_disabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_fav"
                    android:id="@+id/detailfrag_add_to_favourites"
                    android:clickable="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/instructions"
                    android:id="@+id/detailfrag_instructions"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
